  - Amélioration de l'adaptation d'affichage du calendrier en fonction de la taille
  - Amélioration de l'affichage du calendirer dans sa globalité (bordures)
  - Amélioration finale du PDF (taille du canevas ne correspondant pas toujours à la taille du calendrier, les pixels doivent être pairs)
  - Amélioration de la gesiton de la date actuelle
  - Test d'amélioration de la mise à jour
  - Amélioration du système de déconnexion
  - Correction de certaines parties du code un peu WTF (ca fait toujours mal de relire son code 6 mois après xD)
  - Optimisation du calendrier: les affichages en parrallèle d'évenements sont mieux gérés
  - Coté serveur: optimisation de la génération des évènements
  - Ajout du créneau toute la journée pour les évènements durant plus de 14h en journée (uniquement pour le mode planifier)
  - Ajout d'une rubrique à la place de soi-même lors du listing des étudiants d'un groupe
  - Correction de bugs

Stable 1.3.1: 2017-04-19
  - Mise à jour de l'affichage des tâches du mode Planifier
  - Correction de bugs d'affichage et de changement de mode

Stable 1.4: 2017-04-20
  - Correction de bugs CSS
  - Transformation du code CSS sous format JS gérant donc les tailles des créneaux
  - Mise à jour du fichier CSS
  - Nouvelle gestion d'affichage grandi des créneaux
  - Amélioration de l'affichage des créneaux
  - Amélioration de la gestion des salles libres
  - Ajout de l'affichage d'informations des créneaux
  - Le mode comparaison permet maintenant de mettre en évidence les créneaux identiques
  - Refonte du système de gestion des dates
  - Affichage des évènements de journée (médians, finaux, vacances)
  - Préparation de la planification d'évènements
  - Amélioration de l'affichage du mode Planifier (semaine avant ou après celle en cours)
  - Amélioration de l'api pour le PICBOT

Stable 1.4.1: 2017-04-21
  - Correction de bugs (requêtes get, db)
  - Correction au niveau de Git