@@ -170,6 +170,14 @@ background-color: #FFFFFF;
   opacity: 1;
 }
 
+.card.sameCard {
+  border: 2px SOLID #000000;
+}
+
+.card.sameCard .interraction {
+  left: 0;
+}
+
 .time {
   font-size: 10px;
   overflow: hidden;
@@ -264,8 +272,9 @@ background-color: #FFFFFF;
   max-width: 1000px;
   opacity: 0;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  left: 10%;
+  right: 10%;
+  transform: translate(0, -50%);
   border: 5px SOLID #BBBBBB;
   background-color: #FFFFFF;
   border-radius: 10px;
@@ -654,6 +663,7 @@ background-color: #FFFFFF;
 }
 
 .uvType {
+  margin-top: 1px;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -674,7 +684,6 @@ background-color: #FFFFFF;
 
 .uvSalle {
   font-size: 10px;
-  padding-top: 1px;
 }
 
 .uvNote {
